force-app/main/default/objects/Provider__c/Provider__c.object-meta.xml
<CustomObject>
    <label>Provider</label>
    <nameField>
        <displayFormat>P-{00000000}</displayFormat>
        <label>Provider Identifier</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Providers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>