force-app/main/default/objects/Provider__c/fields/Provider_Category__c.field-meta.xml
<CustomField>
    <fullName>Provider_Category__c</fullName>
    <label>Provider Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Provider_Category</valueSetName>
    </valueSet>
</CustomField>