force-app/main/default/objects/Provider__c/fields/Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Provider_Name__c</fullName>
    <label>Provider Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>